tests/baselines/reference/unusedTypeParameterInInterface1.errors.txt
tests/cases/compiler/unusedTypeParameterInInterface1.ts(1,15): error TS6133: 'T' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInInterface1.ts (1 errors) ====
    interface int<T> {
                  ~
!!! error TS6133: 'T' is declared but never used.
    
    }